# pallet-assets-chain-extension

./: Cargo.toml
src/: ink.rs  traits.rs
