[package]
authors = ["727.Ventures <green@727.ventures>"]
edition = "2021"
name = "pallet-assets-chain-extension"
version = "0.1.1"

license = "MIT"
repository = "https://github.com/Brushfam/pallet-assets-chain-extension"
documentation = "https://github.com/Brushfam/pallet-assets-chain-extension/blob/main/README.md"
homepage = "https://727.ventures"
description = "The repository contains full implementation(ink and substrate parts) of the `pallet-assets` chain extension."
keywords = ["wasm", "smart-contracts", "blockchain", "chain-extension"]
categories = ["no-std", "embedded"]

[dependencies]
# Common deps
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
obce = { version = "0.1.0", default-features = false }

# Substrate deps
pallet-assets = { version = "24", default-features = false, optional = true }

# Ink deps
ink = { version = "4.0.0", default-features = false, optional = true }

[features]
default = ["ink-std"]
substrate = [
	"obce/substrate",
	"pallet-assets",
]
ink-lang = [
	"obce/ink",
	"ink",
]
std = [
	"scale-info/std",
	"scale/std",
]
substrate-std = [
	"std",
	"substrate",
	"obce/substrate-std",
	"pallet-assets/std",
]
ink-std = [
	"std",
	"ink-lang",
	"obce/ink-std",
	"ink/std",
]
runtime-benchmarks = [
	"obce/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
]